tests/NormalTests/paczka1/fuzzy1/57535585.err
Error in line 1: ZLy27DUS4 S418 60,9
Error in line 10: m6LMtLnqH1 S418 90,6
Error in line 16: ca0hya S418 77,7
Error in line 25: m6LMtLnqH1 S579 39,3
